--- a/src/VendingManager.Web/Pages/Reposicion.razor.css
+++ b/src/VendingManager.Web/Pages/Reposicion.razor.css
@@ -43,7 +43,7 @@
 }
 
 /* On very small screens */
-@media (max-width: var(--bp-xs)) {
+@media (max-width: 575.98px) {
     .industrial-wrapper .container-fluid {
         padding-left: 5px;
         padding-right: 5px;
@@ -143,7 +143,7 @@
     display: none;
 }
 
-@media (max-width: var(--bp-md)) {
+@media (max-width: 767.98px) {
     .fab-container {
         display: block;
     }
@@ -214,7 +214,7 @@
 }
 
 /* === IPAD LANDSCAPE: sticky header visibility (834px landscape) === */
-@media (min-width: var(--bp-md)) and (max-width: var(--bp-xl)) and (orientation: landscape) {
+@media (min-width: 767.98px) and (max-width: 1199.98px) and (orientation: landscape) {
     .industrial-wrapper .sticky-tools-header {
         display: block;
     }
